force-app/main/default/objects/Conga_and_DocuSign_Settings__c/Conga_and_DocuSign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Conga and DocuSign Settings</label>
</CustomObject>