force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Activate_Resend_PO_for_Non_Emergencies__c.field-meta.xml
<CustomField>
    <fullName>Activate_Resend_PO_for_Non_Emergencies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Resend PO for Non-Emergencies</label>
    <type>Checkbox</type>
</CustomField>