force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Activate_Resend_PO_Outside_Pest_Control__c.field-meta.xml
<CustomField>
    <fullName>Activate_Resend_PO_Outside_Pest_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If TRUE, the Resend PO Confirmation button will send DocuSign envelopes for all lines of business. If FALSE, only Pest Control Orders will send a DocuSign envelope.</inlineHelpText>
    <label>Activate Resend PO Outside Pest Control</label>
    <type>Checkbox</type>
</CustomField>