force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Additions_Conga_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Additions_Conga_Query_Id__c</fullName>
    <label>Additions Conga Query Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>