force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Business_Days_to_Resend_DocuSign_Before__c.field-meta.xml
<CustomField>
    <fullName>Business_Days_to_Resend_DocuSign_Before__c</fullName>
    <label>Business Days to Resend DocuSign Before</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>