force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Cannot_Complete_Conga_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Conga_Query_Id__c</fullName>
    <label>Cannot Complete Conga Query Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>