force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Conga_Root_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Conga_Root_Endpoint__c</fullName>
    <label>Conga Root Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>