force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/DocuSign_Endpoint_Type__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Endpoint_Type__c</fullName>
    <label>DocuSign Endpoint Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>