force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/DocuSign_Envelope_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Envelope_Completed_Status__c</fullName>
    <label>DocuSign Envelope Completed Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>