force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/DocuSign_Reminder_Frequency__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Reminder_Frequency__c</fullName>
    <label>DocuSign Reminder Frequency</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>