force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/DocuSign_Running_User__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Running_User__c</fullName>
    <inlineHelpText>The ID of the user associated with DocuSign so emails can be properly merged.</inlineHelpText>
    <label>DocuSign Running User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>