force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Get_All_Order_Products_Conga_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Get_All_Order_Products_Conga_Query_Id__c</fullName>
    <label>Get All Order Products Conga Query Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>