force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Get_Service_Amount_Conga_Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Get_Service_Amount_Conga_Query_Id__c</fullName>
    <label>Get Service Amount Conga Query Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>