force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Multiple_PO_Numbers_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Multiple_PO_Numbers_Template_Id__c</fullName>
    <label>Multiple PO Numbers Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>