force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/PO_Number_Request_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Request_Email_Body__c</fullName>
    <label>PO Number Request Email Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>