force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/PO_Number_Request_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>PO_Number_Request_Template_Id__c</fullName>
    <label>PO Number Request Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>