force-app/main/default/objects/Conga_and_DocuSign_Settings__c/fields/Replaced_Order_Product_Conga_Query__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Order_Product_Conga_Query__c</fullName>
    <label>Replaced Order Product Conga Query</label>
    <length>18</length>
    <type>Text</type>
</CustomField>